force-app/main/default/src/objects/HealthCloudGA__EhrRelatedObservation__c/HealthCloudGA__EhrRelatedObservation__c.object-meta.xml
<CustomObject>
    <description>Observations related to a parent observation.</description>
    <label>EHR Related Observation</label>
    <nameField>
        <displayFormat>RelOb-{0}</displayFormat>
        <label>EHR Related observation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Related Observations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>