force-app/main/default/src/objects/HealthCloudGA__EhrRelatedObservation__c/fields/HealthCloudGA__Observation__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Observation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Observation</label>
    <referenceTo>HealthCloudGA__EhrObservation__c</referenceTo>
    <relationshipLabel>EHR Related Observations</relationshipLabel>
    <relationshipName>Observations</relationshipName>
    <type>Lookup</type>
</CustomField>