force-app/main/default/src/objects/HealthCloudGA__EhrRelatedObservation__c/fields/HealthCloudGA__RelatedObservation__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__RelatedObservation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Observation</label>
    <referenceTo>HealthCloudGA__EhrObservation__c</referenceTo>
    <relationshipLabel>EHR Related Observations (Related Observation)</relationshipLabel>
    <relationshipName>RelatedObservations</relationshipName>
    <type>Lookup</type>
</CustomField>