force-app/main/default/src/objects/HealthCloudGA__EhrRelatedObservation__c/fields/HealthCloudGA__Type__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Type__c</fullName>
    <description>Type of relationship between observations</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>has-component</fullName>
            </value>
            <value>
                <fullName>has-member</fullName>
            </value>
            <value>
                <fullName>derived-from</fullName>
            </value>
            <value>
                <fullName>sequel-to</fullName>
            </value>
            <value>
                <fullName>replaces</fullName>
            </value>
            <value>
                <fullName>qualified-by</fullName>
            </value>
            <value>
                <fullName>interfered-by</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>