force-app/main/default/src/objects/HealthCloudGA__EhrRelatedObservation__c/fields/HealthCloudGA__TypeCode__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__TypeCode__c</fullName>
    <description>Symbol in syntax defined by the system</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Type Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>