force-app/main/default/src/objects/HealthCloudGA__EhrRelatedObservation__c/fields/HealthCloudGA__TypeSystem__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__TypeSystem__c</fullName>
    <description>Identity of the terminology system</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Type System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>